# gravastar

./: .gitignore  AGENTS.md  CMakeLists.txt  PLAN.md  README.md  UPSTREAM_BLOCKLIST_FORMATS.md  cmake_uninstall.cmake.in
config/: blocklist.toml  gravastar.toml  local_records.toml  upstream_blocklists.toml  upstreams.toml
scripts/openbsd/: gravastar
scripts/openrc/: gravastar
scripts/systemd/: gravastar.service
src/: blocklist.cpp  blocklist.h  cache.cpp  cache.h  config.cpp  config.h  controller_logger.cpp  controller_logger.h  dns_packet.cpp  dns_packet.h  dns_server.cpp  dns_server.h  local_records.cpp  local_records.h  main.cpp  query_logger.cpp  query_logger.h  upstream_blocklist.cpp  upstream_blocklist.h  upstream_resolver.cpp  upstream_resolver.h  util.cpp  util.h
tests/: integration_dig.sh  integration_dot.sh  integration_rebind.sh  integration_upstream_blocklist.sh  main.cpp  run_all_tests.sh  test_cache.cpp  test_config.cpp  test_dns_packet.cpp  test_logging.cpp  test_upstream.cpp  test_upstream_blocklist.cpp
